# MAINTAINER-S_COPILOT

./: .dockerignore  .gitignore  ARCH.md  DECISIONS.md  Dockerfile.api  EVALS.md  MODEL_CARD.md  README.md  RUNBOOK.md  SECURITY.md  alembic.ini  docker-compose.yml  eval_thresholds.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init.py
app/: __init__.py  main.py
app/api/: Dockerfile.api  __init__.py  auth_routes.py  chat_routes.py  classifier_routes.py  deps.py  exception_handlers.py  health_routes.py  rag_routes.py  widget_routes.py
app/db/: models.py  session.py
app/domain/: __init__.py  audit.py  auth.py  chat.py  classification.py  errors.py  issues.py  memory.py  rag.py  users.py  widget.py  widgets.py
app/infra/: __init__.py  boot_checks.py  embeddings.py  llm.py  logging.py  minio.py  model_client.py  redaction.py  redis.py  security.py  settings.py  tracing.py  (+1 more)
chatbot/: Dockerfile.chatbot  README.md  streamlit_app.py
evals/: classification_eval.py  eval_report.py  rag_eval.py
model_server/: Dockerfile.model_server  classifier.py  loaders.py  main.py  ner.py  summarizer.py
notebooks/: day2_01_transformer_classifier_colab.ipynb  day2_02_llm_baseline_colab.ipynb  day2_03_ner_summarizer_check.ipynb
prompts/: chat_system.md
scripts/: build_rag_corpus.py  fetch_issues.py  make_splits.py  seed_demo_user_and_widget.py  seed_vault.py  smoke_test.py
tests/: test_redaction.py
widget/: Dockerfile.widget  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+27 files in other folders)
