[project]
name = "maintainers-copilot"
version = "0.1.0"
description = "Week 7 Maintainer's Copilot"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "scripts", "evals", "model_server"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
plugins = []
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"